--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "ikram",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
