--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
+    "swagger-ui-express": "^5.0.0"
   }
 }
